# picoThing

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
fs/: data.ssi  index.html
lib/: CMakeLists.txt
lib/qrcodegen/: CMakeLists.txt
src/: CMakeLists.txt  fsdata_file.c  lwipopts.h  main.c
src/bm/: CMakeLists.txt  bm.c  bm.h
src/uc8151c/: CMakeLists.txt  uc8151c.c  uc8151c.h
